--- a/blogpost.html
+++ b/blogpost.html
@@ -5,16 +5,21 @@
     </head>
     <body>
         <div id="container">
-        <div id="cabecera">
-            Hyperblog 
-            <span id="tagline">Tu blog de cabecera</span>
-        </div>
-        <div id="post">
+            <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" />
+                Hyperblog 
+                <span id="tagline">Your fist options in blogs</span>
+            </div>
+            <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            <p><img src="imagenes/equipo.jpg" width="100%" /></p>
             <p>Los blogs son lo mejor forma de compartir información y tus ideas. mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar. pero estadisticamente no lo eres... por ahora</p>
             <p>Susbribete y dale like</p>
         </div>
+        <did id="footer">
+        Hecho con amor &lt;3
+        </did>
         </div>
     </body> 
 </html>
